@@ -4,6 +4,7 @@ Upcoming:
 - If the programmer gets a redstone signal it will save the current program to the card. This allows automation to save a program to many cards
 - New opcode ('eval_countcrafts') to count the possible number of crafting operations given a card and an inventory
 - New opcode ('do_vector_sort') to sort a vector
+- New opcodes ('do_vector_max' and 'do_vector_min') to find the index of the largest or smallest item in a vector
 
 1.9.3:
 - Needs McJtyLib 3.1.0
